[tool.poetry]
name = "fix-filename-dates"
version = "0.1.0"
description = "A utility to rename files with ISO date format."
authors = ["Oliver Steele <steele@osteele.com>"]
readme = "README.md"
packages = [{include = "fix-filename-dates"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
python-dateutil = "^2.8"

[tool.poetry.scripts]
fix-filename-dates = "fix-filename-dates:main"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["test"]
